[chromium] Accept four parameters when dispatching a WebInputEvent::GestureTap in chromium DRT eventSender https://bugs.webkit.org/show_bug.cgi?id=85289

Patch by Terry Anderson <tdanderson@chromium.org> on 2012-05-01
Reviewed by Eric Seidel.

* DumpRenderTree/chromium/EventSender.cpp:
(EventSender::gestureEvent):
    This change will allow for testing of WK85101. Currently no tests use the extra
    parameters deltaX and deltaY.

Canonical link: https://commits.webkit.org/102830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115735 268f45cc-cd09-0410-ab3c-d52691b4dbfc